This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: os.chdir() may leak memory on Windows
Type: resource usage Stage: resolved
Components: Extension Modules, Windows Versions: Python 3.8, Python 3.7, Python 3.6, Python 2.7
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: izbyshev, paul.moore, steve.dower, tim.golden, vstinner, xiang.zhang, zach.ware
Priority: normal Keywords: patch

Created on 2018-02-22 00:37 by izbyshev, last changed 2022-04-11 14:58 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 5801 merged izbyshev, 2018-02-22 00:40
PR 5945 merged miss-islington, 2018-03-01 09:15
PR 5946 open miss-islington, 2018-03-01 09:17
PR 5947 merged izbyshev, 2018-03-01 09:41
Messages (4)
msg312522 - (view) Author: Alexey Izbyshev (izbyshev) * (Python triager) Date: 2018-02-22 00:37
'new_path' is not freed if the new directory is a UNC path longer than MAX_PATH.
msg313086 - (view) Author: Xiang Zhang (xiang.zhang) * (Python committer) Date: 2018-03-01 09:14
New changeset 3e197c7a6740d564ad52fb7901c07d5ff49460f5 by Xiang Zhang (Alexey Izbyshev) in branch 'master':
bpo-32903: Fix a memory leak in os.chdir() on Windows (GH-5801)
https://github.com/python/cpython/commit/3e197c7a6740d564ad52fb7901c07d5ff49460f5
msg313090 - (view) Author: Xiang Zhang (xiang.zhang) * (Python committer) Date: 2018-03-01 10:27
New changeset aa40f92240adea7067c3add8e09cec09dcf24d7f by Xiang Zhang (Alexey Izbyshev) in branch '2.7':
[2.7] bpo-32903: Fix a memory leak in os.chdir() on Windows (GH-5801). (#5947)
https://github.com/python/cpython/commit/aa40f92240adea7067c3add8e09cec09dcf24d7f
msg313091 - (view) Author: Xiang Zhang (xiang.zhang) * (Python committer) Date: 2018-03-01 10:28
New changeset 6ae75d9d1221459ab18c2599e42fcc45f9f65617 by Xiang Zhang (Miss Islington (bot)) in branch '3.7':
bpo-32903: Fix a memory leak in os.chdir() on Windows (GH-5801) (#5945)
https://github.com/python/cpython/commit/6ae75d9d1221459ab18c2599e42fcc45f9f65617
History
Date User Action Args
2022-04-11 14:58:58adminsetgithub: 77084
2018-03-01 10:29:40xiang.zhangsetstatus: open -> closed
stage: patch review -> resolved
resolution: fixed
versions: + Python 3.8
2018-03-01 10:28:43xiang.zhangsetmessages: + msg313091
2018-03-01 10:27:36xiang.zhangsetmessages: + msg313090
2018-03-01 09:41:05izbyshevsetpull_requests: + pull_request5715
2018-03-01 09:17:07miss-islingtonsetpull_requests: + pull_request5714
2018-03-01 09:15:10miss-islingtonsetpull_requests: + pull_request5713
2018-03-01 09:14:04xiang.zhangsetnosy: + xiang.zhang
messages: + msg313086
2018-02-22 01:06:41izbyshevsetversions: + Python 2.7
2018-02-22 00:40:38izbyshevsetkeywords: + patch
stage: patch review
pull_requests: + pull_request5579
2018-02-22 00:37:42izbyshevcreate