bpo-32903: Fix a memory leak in os.chdir() on Windows