Modules/posixmodule.c
@@ -1529,12 +1529,14 @@ win32_wchdir(LPCWSTR path)
             return FALSE;
         }
     }
-    if (wcsncmp(new_path, L"\\\\", 2) == 0 ||
-        wcsncmp(new_path, L"//", 2) == 0)
-        /* UNC path, nothing to do. */
-        return TRUE;
-    env[1] = new_path[0];
-    result = SetEnvironmentVariableW(env, new_path);
+
+    int is_unc_path = (wcsncmp(new_path, L"\\\\", 2) == 0 ||
+                       wcsncmp(new_path, L"//", 2) == 0);
+    if (!is_unc_path) {
+        env[1] = new_path[0];
+        result = SetEnvironmentVariableW(env, new_path);
+    }
+
     if (new_path != path_buf)
         PyMem_RawFree(new_path);
     return result;
